# Buckshot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  Technical_Report_Print.md  buckshot.db  buckshot_client  docker-compose.yml  game_history.csv  gen_sounds.py  history.txt  imgui.ini  stress_test.py  stress_test_ai.py  stress_test_async.py  users.txt   
src/: MockServer.c  client_main.c  gamestate.h  gui.c  gui.h  history_manager.c  history_manager.h  protocol.c  protocol.h
src/client/: Client.cpp  Client.h  GameUI.cpp  GameUI.h  GuiMain.cpp  NetworkClient.cpp  NetworkClient.h  main.cpp
src/common/: Protocol.h
src/server/: GameSession.cpp  GameSession.h  ReplayManager.cpp  ReplayManager.h  Server.cpp  Server.h  SocketServer.cpp  SocketServer.h  UserManager.cpp  UserManager.h  main.cpp
tests/: stress_test_async.py
